<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NumeriThec</string>
    <string name="msg_pwd">Mot de passe</string>
    <string name="msg_login">Authentification</string>
    <string name="btn_connexion">Connexion</string>
    <string name="msg_param_app">Parametre de l\'application</string>
    <string name="msg_config_compte">Configurer votre compte</string>
    <string name="msg_refresh">Rafraichir</string>
    <string name="msg_logout">Deconnexion</string>
    <string name="network_error">Erreur reseau</string>
    <string name="sign_error">Identifiant ou mot de passe invalide</string>
    <string name="msg_search">Rechercher</string>
    <string name="msg_help">Aide</string>
    <string name="msg_short_config">Parametre</string>
    <string name="navigation_drawer_open">Ouverture du menu de navigation</string>
    <string name="navigation_drawer_close">Fermeture du menu de navigation</string>
    <string name="msg_accueil_doc">Documents et livres</string>
    <string name="msg_acceuil_music">Audios et vidéos</string>
    <string name="msg_acceuil_img">Images</string>
    <string name="title_activity_docs">Documents</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="msg_erreur_Download">Echecs de téléchargement</string>
    <string name="msg_download_succes">Téléchargement réussi</string>
    <!-- Strings related to Settings -->


</resources>
