<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item android:title="@string/msg_param_app">
       <menu>
           <group android:checkableBehavior="single">
               <item
                   android:id="@+id/btn_modif_compte"
                   android:title="@string/msg_config_compte"
                   android:icon="@drawable/ic_account_circle_black_24dp"/>
               <item
                   android:id="@+id/btn_help"
                   android:title="@string/msg_help"
                   android:icon="@drawable/ic_help_black_24dp"/>
               <item
                   android:title="@string/msg_logout"
                   android:id="@+id/btn_logout"
                   android:icon="@drawable/ic_settings_power_black_24dp"/>
           </group>
       </menu>
   </item>

</menu>